--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.0/css/bulma.css" />
+	<link rel="stylesheet" href="./main.css">
 </head>
 <body>
 <p> my site ,,,,</p>
